# libpostal-duckdb

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: MainDistributionPipeline.yml
src/: libpostal_extension.cpp  postal_extension.cpp
src/include/: libpostal_extension.hpp  postal_extension.hpp
test/nodejs/: libpostal_test.js
test/python/: libpostal_test.py  postal_test.py
test/sql/: libpostal.test  postal.test
